codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__rate_limit_switch_prompt_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  接 近 速 率 限 制
  切 换 到  gpt-5.1-codex-mini 以 减 少 额 度 消 耗 ？

› 1. 切 换 到  gpt-5.1-codex-mini  为  Codex 优 化 。 更 便 宜 、 更 快 ， 但 能 力 稍 弱 。
  2. 保 留 当 前 模 型
  3. 保 留 当 前 模 型 （ 不 再 提 示 ）    隐 藏 后 续 关 于 切 换 模 型 的 速 率 限 制 提 醒 。

  按  enter 确 认 ， 按  esc 返 回
