codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_audio_selection_popup_narrow.snap
---
source: tui_app_server/src/chatwidget/tests.rs
expression: popup
---
  Settings
  Configure settings for Codex.

› 1. Microphone  Current: System default
  2. Speaker     Current: System default

  按 enter 确认，按 esc 返回
