codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__realtime_microphone_picker_popup.snap
---
source: tui/src/chatwidget/tests.rs
expression: popup
---
  Select Microphone
  Saved devices apply to realtime voice only.

  1. System default                                Use your operating system
                                                   default device.
› 2. Unavailable: Studio Mic (current) (disabled)  Configured device is not
                                                   currently available.
                                                   (disabled: Reconnect the
                                                   device or choose another
                                                   one.)
  3. Built-in Mic
  4. USB Mic

  按 enter 确认，按 esc 返回
