codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_fast_mode_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› 让 Codex 处理任何事情                                                      "
"                                                                                "
"  Fast 开启                                                                       "
