codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_line_model_with_reasoning_fast_footer.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
"› 让 Codex 处理任何事情                                                         " Hidden by multi-width symbols: [(3, " "), (12, " "), (14, " "), (16, " "), (18, " "), (20, " "), (22, " ")]
"                                                                                "
"  gpt-5.4 xhigh 极速 · 100% 剩余 · /tmp/project                                 " Hidden by multi-width symbols: [(17, " "), (19, " "), (29, " "), (31, " ")]
