codex-rs/tui_app_server/src/chatwidget/snapshots/codex_tui__chatwidget__tests__status_widget_active.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                "
"• Analyzing (0s • esc to interrupt)                                             "
"                                                                                "
"                                                                                "
"› 让 Codex 处理任何事情                                                      "
"                                                                                "
"  ? for shortcuts                                            100% context left  "
